# poke-engine

./: .gitignore  Cargo.toml  README.md
data/: README.md  benchmark.rs  eval-handcrafted-36.weights  eval-handcrafted-40.weights  eval-old-30.weights  eval_pair_features.rs  gen9-battle-factory-no-ubers-dex.json  selfplay.rs
data/datasets/battle-factory/: no-ubers-states.txt
data/weights/: eval-adopted-pre-38.weights  eval-bench-wish-38.weights  eval-handcrafted-36.weights
poke-engine-py/python/poke_engine/: __init__.py  poke_engine.pyi
poke-engine-py/src/: lib.rs
src/: io.rs  lib.rs  mcts.rs  mcts_threaded.rs  prof.rs  state.rs
src/gen1/: evaluate.rs
src/gen2/: evaluate.rs
src/gen3/: evaluate.rs
src/genx/: choice_effects.rs  damage_calc.rs  evaluate.rs  generate_instructions.rs  matchup.rs  mod.rs  state.rs
tests/: test_mcts_tree_reuse.rs
tools/: README.md  convert_battle_factory_teams.py  make_matchup_suite.py  run_suite.py  showdown_import_to_packed.js
tools/eval_tuning/: README.md  boosted.py  candidate_features.py  constrained.py  context_mlp.py  diag.py  distill_linear.py  fit36.py  mlp.py  score36.py  subsample.py  sweep.py  tune.py
