[package]
name = "poke-engine"
version = "0.0.47"
authors = ["pmariglia <pmariglia@github.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A Pokemon battle engine that can be used to search through the state space of a Pokemon battle."

[lib]
name = "poke_engine"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "poke-engine"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "data/benchmark.rs"

[[bin]]
name = "selfplay"
path = "data/selfplay.rs"

[[bin]]
name = "eval-pair-features"
path = "data/eval_pair_features.rs"

[profile.release]
debug = 1

[dependencies]
dashmap = "6.1.0"
clap = { version = "4.5.4", features = ["derive"] }
rand = { version = "0.9.3", features = ["small_rng"] }
rustc-hash = "2"

[features]
remove_low_chance_instructions = []
gen1 = []
gen2 = []
gen3 = []
gen4 = []
gen5 = []
gen6 = []
gen7 = []
gen8 = []
gen9 = []
terastallization = ["gen9"]
# hot-path profiling counters (see src/prof.rs); combine with a gen feature
prof = []

default = []

[workspace]
members = [
    "poke-engine-py"
]
